[package]
name = "bckpcln"
version = "0.1.0"
authors = ["rsaugier <rodolphe.saugier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
chrono = "*"
simple-error = "*"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'     # Abort on panic

